--- a/repo/common-dev.yml
+++ b/repo/common-dev.yml
@@ -8,7 +8,7 @@ eureka:
 
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:8100/eureka/
 
 common:
   property:
