--- a/repo/common-dev.yml
+++ b/repo/common-dev.yml
@@ -8,5 +8,5 @@ eureka:
 
   client:
     serviceUrl:
-      defaultZone: http://localhost:8100/eureka/
+      defaultZone: http://140.143.158.164:8100/eureka/
 
