--- a/hishop/hishop-goods-dev.yml
+++ b/hishop/hishop-goods-dev.yml
@@ -1,6 +1,7 @@
+
 spring:
   datasource:
-    url: jdbc:mysql://39.106.124.34:3306/news_db?useUnicode=true&characterEncoding=UTF-8&useSSL=true
+    url: jdbc:mysql://39.106.124.34:3306/hishop_goods?useUnicode=true&characterEncoding=UTF-8&useSSL=true
     username: root
     password: danny6688
     type: com.alibaba.druid.pool.DruidDataSource
@@ -31,3 +32,7 @@ spring:
         #druid控制台的用户名和密码
         login-username: druid_admin
         login-password: 123456
+
+project:
+  property:
+    property1: 这是news-client-user-dev的自定义测试参数
