--- a/hishop/hishop-order-dev.yml
+++ b/hishop/hishop-order-dev.yml
@@ -1,7 +1,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://39.106.124.34:3306/hishop_user?useUnicode=true&characterEncoding=UTF-8&useSSL=true
+    url: jdbc:mysql://39.106.124.34:3306/hishop_order?useUnicode=true&characterEncoding=UTF-8&useSSL=true
     username: root
     password: danny6688
     type: com.alibaba.druid.pool.DruidDataSource
