--- a/hishop/hishop-user-dev.yml
+++ b/hishop/hishop-user-dev.yml
@@ -1,9 +1,9 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://39.106.124.34:3306/hishop_user?useUnicode=true&characterEncoding=UTF-8&useSSL=true
+    url: jdbc:mysql://rm-8vb7n7u26z2dgfci6uo.mysql.zhangbei.rds.aliyuncs.com:3306/hishop_user?useUnicode=true&characterEncoding=UTF-8&useSSL=true
     username: root
-    password: danny6688
+    password: Danny6688
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       initial-size: 5
