gateway高并发配置优化

--- a/repo/common-dev.yml
+++ b/repo/common-dev.yml
@@ -3,8 +3,9 @@
 #eureka
 eureka:
   instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
     hostname: ${spring.cloud.client.ip-address}
-    instanceId: ${spring.cloud.client.ip-address}:${server.port}
 
   client:
     serviceUrl:
