--- a/hishop/redis-dev.yml
+++ b/hishop/redis-dev.yml
@@ -1,5 +1,17 @@
 spring:
   redis:
+    database: 0
     host: 140.143.158.164
     port: 6379
     password: requirepass
+    timeout: 6000ms
+    jedis:
+      pool:
+        # 连接池最大连接数（使用负值表示没有限制）
+        max-active: 1000
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: -1ms
+        # 连接池中的最大空闲连接
+        max-idle: 10
+        # 连接池中的最小空闲连接
+        min-idle: 5
