--- a/hishop/hishop-register-dev.yml
+++ b/hishop/hishop-register-dev.yml
@@ -10,7 +10,7 @@ eureka:
     registerWithEureka: false #该应用为注册中心，设置为false, 代表不向注册中心注册自己。默认是true
     fetchRegistry: false #注册中心的职责就是维护服务实例，它并不需要去检索服务，所以设置为false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/  #EurekaServer定义的注册地址，其他EurekaClient向这个地址注册
 
 project:
   property:
