--- a/hishop/hishop-goods-dev.yml
+++ b/hishop/hishop-goods-dev.yml
@@ -1,9 +1,9 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://rm-8vb7n7u26z2dgfci6uo.mysql.zhangbei.rds.aliyuncs.com:3306/hishop_goods?useUnicode=true&characterEncoding=UTF-8&useSSL=true
-    username: root
-    password: Danny6688
+    #url: jdbc:mysql://rm-8vb7n7u26z2dgfci6uo.mysql.zhangbei.rds.aliyuncs.com:3306/hishop_goods?useUnicode=true&characterEncoding=UTF-8&useSSL=true
+    #username: root
+    #password: Danny6688
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       initial-size: 5
